--- a/playbook.yml
+++ b/playbook.yml
@@ -1,6 +1,11 @@
+---
 - hosts: localhost
   connection: local
   become: true
   become_method: sudo
+
+  vars:
+    cve_2016_5195: true
+
   roles:
     - ../ansible-role-cve
