--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,12 +3,18 @@ dependencies: []
 
 galaxy_info:
   author: Phil Porada - pporada@greenlancer.com
-  description: Tests for CVEs
-  company: GreenLancer
+  description: Checks and mitigates CVEs
+  company: GreenLancer.com
   min_ansible_version: 2.1
+  license: MIT
   platforms:
   - name: EL
     versions:
     - 6
     - 7
+  tags:
+    - cve
+    - dirtycow
+    - vulnerability
+    - mitigation
 
