--- a/meta/main.yml
+++ b/meta/main.yml
@@ -13,8 +13,5 @@ galaxy_info:
     - 6
     - 7
   catagories:
-    - cve
-    - dirtycow
-    - vulnerability
-    - mitigation
+    - cve:dirtycow:vulnerability:mitigation
 
